# game-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
Assets/Shaders/Compiled/: BRDFIntegration.frag.msl  BRDFIntegration.vert.msl  BrightExtract.frag.msl  Composite.frag.msl  Cube.frag.msl  Cube.vert.msl  EquirectToCubemap.frag.msl  Fullscreen.vert.msl  GaussianBlur.frag.msl  IrradianceConvolution.frag.msl  Mesh.frag.msl  Mesh.vert.msl  Prefilter.frag.msl  Shadow.frag.msl  Shadow.vert.msl  Skybox.frag.msl  Triangle.frag.msl  Triangle.vert.msl
Engine/: CMakeLists.txt
Engine/include/Engine/: Application.h
Engine/include/Engine/Assets/: AssetCache.h  AssetManager.h
Engine/include/Engine/Assets/ModelLoader/: GltfLoader.h
Engine/include/Engine/Assets/ShaderLoader/: ShaderLoader.h
Engine/include/Engine/Core/: AppMode.h  Application.h  Input.h  SDLContext.h
Engine/include/Engine/ECS/: Components.h  Systems.h  Transform.h
Engine/include/Engine/Renderer/: Buffer.h  Camera.h  CubePrimitive.h  CubemapTexture.h  DebugUI.h  EnvironmentMap.h  GPUDevice.h  GPUResource.h  GlmConfig.h  IBLSettings.h  Light.h  Material.h  Mesh.h  Model.h  Pipeline.h  PostProcessSettings.h  Renderer.h  Sampler.h  Shader.h  ShadowMap.h  Texture.h  Vertex.h
Engine/include/Engine/Scene/: Scene.h  SceneNode.h  Transform.h
Engine/include/Engine/Window/: Window.h
Engine/src/: Application.cpp
Engine/src/Assets/: AssetManager.cpp
Engine/src/Assets/ModelLoader/: GltfLoader.cpp
Engine/src/Assets/ShaderLoader/: ShaderLoader.cpp
Engine/src/Core/: Application.cpp  Input.cpp  SDLContext.cpp
Engine/src/ECS/: Systems.cpp  Transform.cpp
Engine/src/Renderer/: Camera.cpp  CubemapTexture.cpp  DebugUI.cpp  EnvironmentMap.cpp  GPUDevice.cpp  Material.cpp  Mesh.cpp  Model.cpp  Pipeline.cpp  Renderer.cpp  Sampler.cpp  Shader.cpp  ShadowMap.cpp  Texture.cpp
Engine/src/Scene/: Scene.cpp  SceneNode.cpp  Transform.cpp
Engine/src/Window/: Window.cpp
Game/: CMakeLists.txt
Game/src/: main.cpp
